--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -22,7 +22,6 @@
     .SidebarBtns {
       display: flex;
       flex-direction: column;
-      //   align-items: center;
       gap: 15px;
 
       button {
@@ -38,7 +37,20 @@
           padding: 10px 20px;
           border-radius: 10px;
         }
+
+        &.active {
+          background-color: #ffd6cc;
+          padding: 10px 20px;
+          border-radius: 10px;
+        }
       }
     }
+  }
+
+  .SidebarAccount {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
   }
 }
