--- a/components/Tabs/QuestionAnswer/QuestionAnswer.module.scss
+++ b/components/Tabs/QuestionAnswer/QuestionAnswer.module.scss
@@ -10,35 +10,38 @@
     select,
     textarea,
     input {
-      width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
     }
 
+    .ragCollection {
+      width: 25%;
+    }
+
+    .QuestionAnswerInput {
+      width: 100%;
+    }
+
     textarea {
-      height: 100px;
+      height: 200px;
+      width: 100%;
     }
   }
 
   .formActions {
     display: flex;
     gap: 10px;
+    justify-content: flex-end;
 
     button {
       padding: 10px 20px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-
-      &:first-child {
-        background-color: #f0f0f0;
-      }
-
-      &:last-child {
-        background-color: #007bff;
-        color: #fff;
-      }
+      background-color: #f0f0f0;
+      color: gray;
+      font-weight: bold;
     }
   }
 }
