--- a/components/Content/Content.module.scss
+++ b/components/Content/Content.module.scss
@@ -1,4 +1,28 @@
 .Content {
   width: 82%;
-  padding: 20px;
+  //   padding: 20px;
+  background-color: #fff7ee;
+
+  .ContentBlocks {
+    background-color: white;
+    width: 100%;
+    height: 100px;
+    margin: 0;
+    border-bottom: 1px solid #ebdcd7;
+    display: flex;
+    align-items: center;
+
+    h2 {
+      margin-left: 20px;
+      font-weight: 600;
+    }
+  }
+
+  .ContentBox {
+    width: 95%;
+    margin: 30px auto;
+    background-color: white;
+    border-radius: 20px;
+    padding: 40px;
+  }
 }
