--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -22,6 +22,10 @@
         display: flex;
         align-items: center;
         gap: 10px;
+
+        span {
+          font-weight: bold;
+        }
       }
     }
 
