--- a/components/Tabs/DocumentSummary/DocumentSummary.module.scss
+++ b/components/Tabs/DocumentSummary/DocumentSummary.module.scss
@@ -3,49 +3,89 @@
     margin-bottom: 15px;
 
     label {
-      display: block;
-      margin-bottom: 5px;
+      color: #714d3d;
+      font-weight: 500;
+      font-size: 15px;
     }
 
-    select,
-    textarea,
     input {
-      width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
     }
+  }
+
+  .DocSummaryDocument {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 
     textarea {
-      height: 100px;
+      width: 100%;
+      height: 150px;
+      border: 1px solid #321406;
+      padding: 10px;
     }
+  }
+
+  .DocSummaryLength {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    select {
+      width: 200px;
+      padding: 10px;
+    }
+  }
+
+  .DocSummaryTraining {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 30px;
 
     button {
-      padding: 10px;
-      background-color: #f0f0f0;
+      width: 20%;
+      text-align: left;
+      background: transparent;
       border: none;
-      border-radius: 5px;
+      outline: none;
+      margin-left: 20px;
+      display: flex;
+      align-items: center;
+      gap: 5px;
       cursor: pointer;
+    }
+  }
+
+  .DocSummaryResponse {
+    margin-top: 30px;
+
+    div {
+      width: 100%;
+      height: 40px;
+      background-color: #fef6ee;
+      margin-top: 10px;
     }
   }
 
   .formActions {
     display: flex;
     gap: 10px;
+    justify-content: flex-end;
 
     button {
-      padding: 10px 20px;
+      padding: 12px 20px;
       border: none;
-      border-radius: 5px;
       cursor: pointer;
+      background-color: #f0f0f0;
+      color: gray;
 
       &:first-child {
-        background-color: #f0f0f0;
-      }
-
-      &:last-child {
-        background-color: #007bff;
-        color: #fff;
+        border: 1px solid black;
+        color: black;
+        background-color: transparent;
       }
     }
   }
