--- a/components/Tabs/Personalization/Personalization.module.scss
+++ b/components/Tabs/Personalization/Personalization.module.scss
@@ -3,41 +3,87 @@
     margin-bottom: 15px;
 
     label {
-      display: block;
-      margin-bottom: 5px;
+      color: #714d3d;
+      font-weight: 500;
+      font-size: 15px;
     }
 
-    select,
-    textarea,
     input {
       width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
     }
+  }
+
+  .PersonaliseDocument {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 
     textarea {
-      height: 100px;
+      width: 100%;
+      height: 150px;
+      border: 1px solid #321406;
+      padding: 10px;
     }
   }
 
-  .formActions {
-    display: flex;
-    gap: 10px;
+  .PersonaliseResponse {
+    margin-top: 30px;
 
-    button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+    div {
+      width: 100%;
+      height: 40px;
+      background-color: #fef6ee;
+      margin-top: 10px;
+    }
+  }
 
-      &:first-child {
-        background-color: #f0f0f0;
+  .PersonaliseTargetAudience {
+    width: 100%;
+    margin-top: 20px;
+
+    label {
+      color: #714d3d;
+      font-weight: 500;
+      font-size: 15px;
+    }
+
+    .PersonTargetBox {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 10px;
+      width: 100%;
+
+      .PersonaliseTarget {
+        flex: 0.9;
+
+        input {
+          width: 100%;
+          padding: 14px;
+          border: 1px solid black;
+        }
       }
 
-      &:last-child {
-        background-color: #007bff;
-        color: #fff;
+      .formActions {
+        display: flex;
+        gap: 10px;
+
+        button {
+          padding: 12px 20px;
+          border: none;
+          cursor: pointer;
+          background-color: #f0f0f0;
+          color: gray;
+
+          &:first-child {
+            border: 1px solid black;
+            color: black;
+            background-color: transparent;
+          }
+        }
       }
     }
   }
