--- a/components/Tabs/SentimentAnalysis/SentimentAnalysis.module.scss
+++ b/components/Tabs/SentimentAnalysis/SentimentAnalysis.module.scss
@@ -3,21 +3,16 @@
     margin-bottom: 15px;
 
     label {
-      display: block;
-      margin-bottom: 5px;
+      color: #714d3d;
+      font-weight: 500;
+      font-size: 15px;
     }
 
-    select,
-    textarea,
     input {
       width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
-    }
-
-    textarea {
-      height: 100px;
     }
 
     button {
@@ -29,24 +24,61 @@
     }
   }
 
+  .SentAnalysDocument {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    textarea {
+      width: 100%;
+      height: 150px;
+      border: 1px solid #321406;
+      padding: 10px;
+    }
+  }
+
+  .SentAnalysTraining {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 30px;
+
+    button {
+      width: 20%;
+      text-align: left;
+      background: transparent;
+      border: none;
+      outline: none;
+      margin-left: 20px;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      cursor: pointer;
+    }
+  }
+
   .formActions {
     display: flex;
     gap: 10px;
+    justify-content: flex-end;
 
     button {
-      padding: 10px 20px;
+      padding: 12px 20px;
       border: none;
-      border-radius: 5px;
       cursor: pointer;
+      background-color: #f0f0f0;
+      color: gray;
+    }
+  }
 
-      &:first-child {
-        background-color: #f0f0f0;
-      }
+  .SentAnalysResponse {
+    margin-top: 30px;
 
-      &:last-child {
-        background-color: #007bff;
-        color: #fff;
-      }
+    div {
+      width: 100%;
+      height: 40px;
+      background-color: #fef6ee;
+      margin-top: 10px;
     }
   }
 }
