--- a/components/Tabs/QuestionAnswer/QuestionAnswer.module.scss
+++ b/components/Tabs/QuestionAnswer/QuestionAnswer.module.scss
@@ -51,9 +51,11 @@
 
     div {
       width: 100%;
-      height: 40px;
+      min-height: 40px;
       background-color: #fef6ee;
       margin-top: 10px;
+      padding: 15px;
+      height: max-content;
     }
   }
 
