--- a/components/Tabs/AudioTranscription/AudioTranscription.module.scss
+++ b/components/Tabs/AudioTranscription/AudioTranscription.module.scss
@@ -1,12 +1,11 @@
+@import "../../../styles/mixins.module.scss";
+
 .AudioTranscription {
   .AudioTranscriptionResponse {
     margin-top: 20px;
 
     div {
-      width: 100%;
-      height: 40px;
-      background-color: #fef6ee;
-      margin-top: 10px;
+      @include response();
     }
   }
 
