--- a/components/Tabs/EntityExtraction/EntityExtraction.module.scss
+++ b/components/Tabs/EntityExtraction/EntityExtraction.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/mixins.module.scss";
+
 .EntityExtraction {
   .EntityExtractionResponse {
     margin-top: 30px;
@@ -9,10 +11,7 @@
     }
 
     div {
-      width: 100%;
-      height: 40px;
-      background-color: #fef6ee;
-      margin-top: 10px;
+      @include response();
     }
   }
 
