--- a/components/Tabs/QuestionAnswer/QuestionAnswer.module.scss
+++ b/components/Tabs/QuestionAnswer/QuestionAnswer.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/mixins.module.scss";
+
 .QuestionAnswer {
   .formGroup {
     margin-bottom: 15px;
@@ -50,12 +52,7 @@
     margin-top: 20px;
 
     div {
-      width: 100%;
-      min-height: 40px;
-      background-color: #fef6ee;
-      margin-top: 10px;
-      padding: 15px;
-      height: max-content;
+      @include response();
     }
   }
 
