--- a/styles/mixins.module.scss
+++ b/styles/mixins.module.scss
@@ -15,3 +15,31 @@ $lightBlue: #d8ecff;
   padding: 15px;
   height: max-content;
 }
+
+@font-face {
+  font-family: "IBMPlexSans";
+  src: url("../fonts/IBMPlexSans-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IBMPlexSans";
+  src: url("../fonts/IBMPlexSans-ExtraLight.woff") format("woff");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IBMPlexSans";
+  src: url("../fonts/IBMPlexSans-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IBMPlexSans";
+  src: url("../fonts/IBMPlexSans-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
