--- a/components/Content/Content.module.scss
+++ b/components/Content/Content.module.scss
@@ -3,10 +3,10 @@
 .Content {
   width: 82%;
   //   padding: 20px;
-  background-color: $lightBlue;
+  background-color: $white;
 
   .ContentBlocks {
-    background-color: white;
+    background-color: $secondaryBackground;
     width: 100%;
     height: 100px;
     margin: 0;
@@ -23,7 +23,7 @@
   .ContentBox {
     width: 95%;
     margin: 30px auto;
-    background-color: white;
+    background-color: $secondaryBackground;
     border-radius: 20px;
     padding: 40px;
   }
