--- a/styles/mixins.module.scss
+++ b/styles/mixins.module.scss
@@ -10,7 +10,7 @@ $lightBlue: #d8ecff;
 @mixin response {
   width: 100%;
   min-height: 40px;
-  background-color: $lightBlue;
+  background-color: $white;
   margin-top: 10px;
   padding: 15px;
   height: max-content;
