--- a/components/Tabs/SentimentAnalysis/SentimentAnalysis.module.scss
+++ b/components/Tabs/SentimentAnalysis/SentimentAnalysis.module.scss
@@ -15,6 +15,7 @@
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
+      font-size: $fontSize;
     }
 
     button {
@@ -36,6 +37,7 @@
       height: 150px;
       border: 1px solid #321406;
       padding: 10px;
+      font-size: $fontSize;
     }
   }
 
