--- a/components/Tabs/DocumentSummary/DocumentSummary.module.scss
+++ b/components/Tabs/DocumentSummary/DocumentSummary.module.scss
@@ -14,6 +14,7 @@
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
+      font-size: $fontSize;
     }
   }
 
@@ -27,6 +28,7 @@
       height: 150px;
       border: 1px solid #321406;
       padding: 10px;
+      font-size: $fontSize;
     }
   }
 
