--- a/styles/mixins.module.scss
+++ b/styles/mixins.module.scss
@@ -7,6 +7,8 @@ $error: #d32f2f;
 $grey: #ababab;
 $lightBlue: #d8ecff;
 
+$fontSize: 17px;
+
 @mixin response {
   width: 100%;
   min-height: 40px;
