--- a/components/Tabs/Personalization/Personalization.module.scss
+++ b/components/Tabs/Personalization/Personalization.module.scss
@@ -79,6 +79,7 @@
           cursor: pointer;
           background-color: #f0f0f0;
           color: gray;
+          font-size: $fontSize;
 
           &:first-child {
             border: 1px solid black;
