--- a/components/Tabs/DocumentSummary/DocumentSummary.module.scss
+++ b/components/Tabs/DocumentSummary/DocumentSummary.module.scss
@@ -36,6 +36,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    margin-top: 50px;
 
     select {
       width: 200px;
@@ -87,6 +88,7 @@
       cursor: pointer;
       background-color: #f0f0f0;
       color: gray;
+      font-size: $fontSize;
 
       &:first-child {
         border: 1px solid black;
