--- a/components/Tabs/EntityExtraction/EntityExtraction.module.scss
+++ b/components/Tabs/EntityExtraction/EntityExtraction.module.scss
@@ -120,15 +120,30 @@
             opacity: 0;
             width: 0;
             height: 0;
+            position: absolute;
           }
 
           .checkmark {
-            position: relative;
             height: 30px;
             width: 30px;
             background-color: #eee;
             border: 1px solid #ccc;
             cursor: pointer;
+            display: inline-block;
+            position: relative;
+          }
+
+          .checkmark::after {
+            content: "";
+            position: absolute;
+            display: none;
+            left: 10px;
+            top: 5px;
+            width: 6px;
+            height: 12px;
+            border: solid white;
+            border-width: 0 3px 3px 0;
+            transform: rotate(45deg);
           }
 
           input[type="checkbox"]:checked + .checkmark {
@@ -136,20 +151,7 @@
             border-color: #2196f3;
           }
 
-          .checkmark:after {
-            content: "";
-            position: absolute;
-            display: none;
-            left: 6px;
-            top: 3px;
-            width: 5px;
-            height: 10px;
-            border: solid white;
-            border-width: 0 3px 3px 0;
-            transform: rotate(45deg);
-          }
-
-          input[type="checkbox"]:checked + .checkmark:after {
+          input[type="checkbox"]:checked + .checkmark::after {
             display: block;
           }
         }
