--- a/components/Tabs/EntityExtraction/EntityExtraction.module.scss
+++ b/components/Tabs/EntityExtraction/EntityExtraction.module.scss
@@ -25,15 +25,9 @@
       padding: 12px 20px;
       border: none;
       cursor: pointer;
-      background-color: #f0f0f0;
-      color: gray;
+      background-color: $grey;
+      color: $white;
       font-size: $fontSize;
-
-      &:first-child {
-        border: 1px solid black;
-        color: black;
-        background-color: transparent;
-      }
     }
   }
 
@@ -93,6 +87,7 @@
             padding: 10px;
             border: 1px solid black;
             font-size: $fontSize;
+            height: 45px;
           }
         }
 
@@ -100,8 +95,8 @@
           select {
             padding: 10px;
             border: 1px solid black;
-            font-size: 14px;
-            height: 40px;
+            font-size: $fontSize;
+            height: 45px;
             background-color: white;
             text-align: center;
             border-radius: 0;
