--- a/components/Tabs/Personalization/Personalization.module.scss
+++ b/components/Tabs/Personalization/Personalization.module.scss
@@ -77,15 +77,9 @@
           padding: 12px 20px;
           border: none;
           cursor: pointer;
-          background-color: #f0f0f0;
-          color: gray;
+          background-color: $grey;
+          color: $white;
           font-size: $fontSize;
-
-          &:first-child {
-            border: 1px solid black;
-            color: black;
-            background-color: transparent;
-          }
         }
       }
     }
