--- a/components/Tabs/EntityExtraction/EntityExtraction.module.scss
+++ b/components/Tabs/EntityExtraction/EntityExtraction.module.scss
@@ -118,36 +118,43 @@
             position: absolute;
           }
 
-          .checkmark {
-            height: 30px;
-            width: 30px;
-            background-color: #eee;
-            border: 1px solid #ccc;
-            cursor: pointer;
-            display: inline-block;
-            position: relative;
-          }
+          .checkmarkBox {
+            height: 45px;
+            display: flex;
+            align-items: center;
 
-          .checkmark::after {
-            content: "";
-            position: absolute;
-            display: none;
-            left: 10px;
-            top: 5px;
-            width: 6px;
-            height: 12px;
-            border: solid white;
-            border-width: 0 3px 3px 0;
-            transform: rotate(45deg);
-          }
+            .checkmark {
+              height: 30px;
+              width: 30px;
+              background-color: #eee;
+              border: 1px solid #ccc;
+              cursor: pointer;
+              display: inline-block;
+              position: relative;
+              margin-top: 4px;
 
-          input[type="checkbox"]:checked + .checkmark {
-            background-color: #2196f3;
-            border-color: #2196f3;
-          }
+              &::after {
+                content: "";
+                position: absolute;
+                display: none;
+                left: 10px;
+                top: 5px;
+                width: 6px;
+                height: 12px;
+                border: solid white;
+                border-width: 0 3px 3px 0;
+                transform: rotate(45deg);
+              }
+            }
 
-          input[type="checkbox"]:checked + .checkmark::after {
-            display: block;
+            .checkmark.checked {
+              background-color: #2196f3;
+              border-color: #2196f3;
+            }
+
+            .checkmark.checked::after {
+              display: block;
+            }
           }
         }
 
