--- a/components/Tabs/AudioTranscription/AudioTranscription.module.scss
+++ b/components/Tabs/AudioTranscription/AudioTranscription.module.scss
@@ -21,6 +21,7 @@
         cursor: pointer;
         background-color: lightgray;
         color: gray;
+        border-radius: 8px;
       }
     }
 
