--- a/components/Tabs/Personalization/Personalization.module.scss
+++ b/components/Tabs/Personalization/Personalization.module.scss
@@ -80,6 +80,7 @@
           background-color: $grey;
           color: $white;
           font-size: $fontSize;
+          border-radius: 8px;
         }
       }
     }
